--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --primary-color: #7286D3;
+  --secondary-color: #8EA7E9;
+  --lightblue:#E5E0FF;
+  --whiteish: #FFF2F2;
+  --overlay: rgba(126, 118, 118, 0.7);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
