--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
   --overlay: rgba(126, 118, 118, 0.7);
 }
 
+*{
+  box-sizing: border-box;
+  margin: 0;
+  
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -18,4 +25,39 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul{
+  list-style: none;
+
+}
+
+a{
+  text-decoration: none;
+}
+
+.button{
+  padding: 17px;
+  font-size:  1.2rem;
+  color: var(--whiteish);
+  font-size: 600;
+  text-transform: uppercase;
+  background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
+  cursor: pointer;
+} 
+
+
+.button:hover{
+  background: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.line{
+  display: block;
+  width: 40px;
+  height: 3px;
+  margin: 5px auto;
+  background-color: var(--primary-color);
 }
