--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -7,7 +7,6 @@
   z-index: 1; 
   transition: .3s ease-in;
   overflow: hidden;
-  background-color: var(--whiteish);
 }
 
 .header .navbar{
@@ -23,9 +22,11 @@
 .header .nav-menu a{
   color: var(--primary-color);
 }
-.header .navbar img{
+.header .navbar h1{
   width: 250px;
   height: auto;
+  color: var(--primary-color);
+
 }
 
 
@@ -40,7 +41,7 @@
 .header .nav-item a:hover{
   padding-bottom: 12px;
   border-bottom: 3px solid var(--secondary-color);
-  transition: .3s;
+  transition: .5s;
 
 }
 
@@ -73,7 +74,7 @@
     height: 90vh;
     z-index: 999;
     text-align: center;
-    transition: .3s;
+    transition: .5s ease-in-out;
   }
 
   .nav-menu.active {
