complete hero section

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -50,3 +50,12 @@
   width: 300px;
 }
 
+@media screen and (max-width:940px) {
+  .hero .content p:nth-child(3) {
+    font-size:  2.6rem;
+  }
+  .hero .content p:nth-child(4) {
+    font-size:  1.6rem;
+  }
+  
+}
