--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,5 +1,5 @@
 .hero{
-  background-color: var(--overlay);
+  /* background-color: var(--overlay); */
   color: var(--primary-color);
   height: 100vh;
   width: 100%;
