--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -5,11 +5,11 @@
   width: 100%;
 }
 
-.contact .container {
+ .container {
   /* width: 1240px; */
   width: 100%;
-  height: 50vh;
-border: black solid 1.0px;
+  height: 100%;
+  border: black solid 1.0px;
   margin: auto;
   /* display: grid; */
   /* grid-template-columns: repeat(2, 1fr); */
@@ -39,3 +39,23 @@ li{
   /* clear:both; */
 }
 
+input[type='text'],
+  input[type='email']{
+    border: 0;
+    width: 80%;
+    height: 50px;
+    padding: 0 20px;
+    font-size: 16px;
+    box-sizing: border-box; 
+    background: var(--lightblue);
+  }
+
+  textarea{
+    width: 80%;
+    border: 0;
+    background: var(--lightblue);
+    height: 50px;
+    font-size: 16px;
+    padding: 20px;
+    min-height: 120px;
+  }
